[project]
name = "rust_cargo_environment"
version = "0.1.0"
description = "RL training environment using cargo for rewards"
readme = "README.md"
authors = [
    { name = "Lucien Thomas", email = "lucienthomas00@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "verifiers>=0.1.2.post0",
    "huggingface-hub>=0.20.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"
